wk_taa_taaqa/src/objects/ATA_Non_Geographic_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>DTN__c</fullName>
        <label>DTN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue__c</fullName>
        <label>FieldValue</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ownership_NamedType__c</fullName>
        <description>Named type to be used during Lead Ownership assignment.</description>
        <inlineHelpText>Named type to be used during Lead Ownership assignment.</inlineHelpText>
        <label>Ownership NamedType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>National</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <label>RoleName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_Assignment_Type__c</fullName>
        <label>Role Assignment Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Functional type, this rule is used for, either AccountTeam / LeadOwnership</description>
        <inlineHelpText>Functional type, this rule is used for, either AccountTeam / LeadOwnership</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AccountTeam</fullName>
                </value>
                <value>
                    <fullName>LeadOwnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ATA Non Geographic Assignment</label>
    <listViews>
        <fullName>AccountTeam_Rules</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>FieldName__c</columns>
        <columns>FieldValue__c</columns>
        <columns>RoleName__c</columns>
        <columns>DTN__c</columns>
        <columns>Role_Assignment_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>AccountTeam</value>
        </filters>
        <label>AccountTeam Rules</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>LeadOwnership_Rules</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>FieldName__c</columns>
        <columns>FieldValue__c</columns>
        <columns>DTN__c</columns>
        <columns>Ownership_NamedType__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>LeadOwnership</value>
        </filters>
        <label>LeadOwnership Rules</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ATANGA-{00000}</displayFormat>
        <label>ATA Non-Geographic Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATA Non Geographic Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>